[package]
name = "myoncore"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true

egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
